force-app/main/default/objects/smt_Summit_Tracker__c/smt_Summit_Tracker__c.object-meta.xml
<CustomObject>
    <label>Summit Tracker</label>
    <nameField>
        <label>Summit Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summit Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>