force-app/main/default/objects/smt_Summit_Tracker__c/fields/smt_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>smt_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>