force-app/main/default/objects/smt_Summit_Tracker__c/fields/smt_School__c.field-meta.xml
<CustomField>
    <fullName>smt_School__c</fullName>
    <description>Master-Detail (Account)</description>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Summit Trackers</relationshipLabel>
    <relationshipName>Summit_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>