force-app/main/default/objects/smt_Summit_Tracker__c/fields/smt_Total_Weightage_Achieved__c.field-meta.xml
<CustomField>
    <fullName>smt_Total_Weightage_Achieved__c</fullName>
    <label>Total Weightage Achieved</label>
    <summarizedField>smt_Summit_Section__c.smt_Target_Achieved_With_Weightage__c</summarizedField>
    <summaryForeignKey>smt_Summit_Section__c.smt_Summit_Tracker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>