force-app/main/default/objects/smt_Summit_Tracker__c/fields/smt_Year__c.field-meta.xml
<CustomField>
    <fullName>smt_Year__c</fullName>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>