force-app/main/default/objects/smt_Summit_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>smt_School__c</columns>
    <columns>smt_Year__c</columns>
    <columns>smt_Total_Weightage_Achieved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>